--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "bitsharesjs",
+    "name": "eidosjs",
     "version": "1.8.3",
-    "description": "Pure JavaScript Bitshares library for node.js and browsers.",
+    "description": "Pure JavaScript Eidos library for node.js and browsers.",
     "browser": {
         "ws": false,
         "crypto": false
@@ -20,8 +20,8 @@
         "postbuild": "npm run browserify && npm run build-es",
         "build:watch": "babel lib -d dist --watch",
         "prebrowserify": "mkdirp build",
-        "browserify": "cross-env NODE_ENV=production browserify --full-paths dist/browser.js --standalone bitshares_js -o build/bitsharesjs.js -d",
-        "postbrowserify": "cross-env NODE_ENV=production uglifyjs --compress --mangle --sequences --drop_console --output build/bitsharesjs.min.js -- build/bitsharesjs.js",
+        "browserify": "cross-env NODE_ENV=production browserify --full-paths dist/browser.js --standalone eidos_js -o build/eidosjs.js -d",
+        "postbrowserify": "cross-env NODE_ENV=production uglifyjs --compress --mangle --sequences --drop_console --output build/eidosjs.min.js -- build/eidosjs.js",
         "precommit": "pretty-quick --staged && npm run test",
         "prepublish": "npm run build && npm run test",
         "doc": "esdoc -c esdoc.json",
@@ -33,17 +33,12 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/bitshares/bitsharesjs.git"
+        "url": "git+https://github.com/enumivo/eidosjs.git"
     },
-    "author": "Sigve Kvalsvik <bitsharesblocks@gmail.com> (https://github.com/svk31)",
-    "contributors": [
-        "James Calfee <james@jcalfee.info> (https://github.com/jcalfee/)",
-        "Daniel Larimer <dan@cryptonomex.com> (https://github.com/bytemaster/)",
-        "Valentine Zavgorodnev <valentine.zavgorodnev@gmail.com> (https://github.com/valzav/)"
-    ],
+    "author": "Quattro Cento <quattrocento1@hotmail.com> (https://github.com/enumivo)",
     "license": "MIT",
     "bugs": {
-        "url": "https://github.com/bitshares/bitsharesjs/issues"
+        "url": "https://github.com/enumivo/eidosjs/issues"
     },
     "engines": {
         "node": ">= 6.0.0"
@@ -52,7 +47,7 @@
     "jsnext:main": "./es/index.js",
     "dependencies": {
         "bigi": "1.4.2",
-        "bitsharesjs-ws": "1.5.4",
+        "eidosjs-ws": "0.0.1",
         "bs58": "4.0.1",
         "bytebuffer": "5.0.1",
         "create-hash": "1.2.0",
