--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "eidosjs",
     "version": "0.0.2",
-    "description": "Pure JavaScript Bitshares library for node.js and browsers.",
+    "description": "Pure JavaScript Eidos library for node.js and browsers.",
     "browser": {
         "ws": false,
         "crypto": false
