--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
         "browserify": "cross-env NODE_ENV=production browserify --full-paths dist/browser.js --standalone eidos_js -o build/eidosjs.js -d",
         "postbrowserify": "cross-env NODE_ENV=production uglifyjs --compress --mangle --sequences --drop_console --output build/eidosjs.min.js -- build/eidosjs.js",
         "precommit": "pretty-quick --staged && npm run test",
-        "prepublish": "npm run build && npm run test",
+        "prepublish": "npm run build",
         "doc": "esdoc -c esdoc.json",
         "example:transfer": "babel-node examples/transfer",
         "example:feed": "babel-node examples/publishFeed",
