--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "eidosjs",
-    "version": "0.0.5",
+    "version": "1.0.0",
     "description": "Pure JavaScript Eidos library for node.js and browsers.",
     "browser": {
         "ws": false,
@@ -47,7 +47,7 @@
     "jsnext:main": "./es/index.js",
     "dependencies": {
         "bigi": "1.4.2",
-        "eidosjs-ws": "0.0.5",
+        "eidosjs-ws": "./../eidosjs-ws",
         "bs58": "4.0.1",
         "bytebuffer": "5.0.1",
         "create-hash": "1.2.0",
